--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Thiago Hersan
 
 # URL
-url: https://2018.thiagohersan.com
+url: https://thiagohersan.com
 baseurl: ''
 permalink: :title/
 include: ['_pages']
